Native/Test/Fabric/conditional-execution-using-and.kl.out
conditional-execution-using-and.kl:3: SyntaxError: Unexpected string
  report "Did something";
         ^^^^^^^^^^^^^^^
